couple more Number constructors changed to use valueOf as 3.5x faster